Create ToDo & ToDoDataBase class to generate a new ToDo note

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 	  <hr class="breakline">
 		<ul class="listForm">
 		  <li class="input-container">
-			<form>
+			<form class="list-form">
 				<input class="input" type ="text" placeholder="Add to your list...">
 				<i class="material-icons Enter">keyboard_return</i>
 			</form>
