--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <title>To Do List</title>
 </head>
 <body>
-<div class="toDo-container">
+<section class="todo-list">
 	<div class="toDo">
 		<div class="heading">
 		<h1>Today's To Do</h1>
@@ -25,17 +25,17 @@
 		<ul class="listForm">
 		  <li class="input-container">
 			<form class="list-form">
-				<input class="input" type ="text" placeholder="Add to your list...">
+				<input class="input" type ="text" name="activity" placeholder="Add to your list...">
 				<i class="material-icons Enter">keyboard_return</i>
 			</form>
 			<div class="breakline"><hr></div>
 		  </li>
 		  <li class="items"> 
-			
+		
 		  </li>
 		</ul>
      <div class="clear-btn">Clear all completed</div>
 		</div>
-</div>
+	</section>
 </body>
 </html>
