--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
 		<i class="material-icons loop">loop</i>
 	  </div>
 	  <hr class="breakline">
-		<ul class="listForm">
+	<div class="second-part">	
+	  <ul class="listForm">
 		  <li class="input-container">
 			<form class="list-form">
 				<input class="input" type ="text" name="activity" placeholder="Add to your list...">
@@ -36,6 +37,7 @@
 		</ul>
      <div class="clear-btn">Clear all completed</div>
 		</div>
+	</div>
 	</section>
 </body>
 </html>
